2006-05-23  Jim Meyering  <jim@meyering.net>

	* lib/autoconf/functions.m4 (AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK):
	Fix typo introduced with 2006-04-02 change.  It reversed the sense
	of the test.

2006-05-23  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/status.m4 (_AC_OUTPUT_HEADER): Simplify ac_dA and
	ac_dB slightly, to save bytes in the script.
	Max out at 50 lines, rather than 96; this is more likely
	(though not guaranteed) to avoid obscure 'sed' failures.

2006-05-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/autotest/general.m4 (AT_INIT): UnixWare `tr' may interpret
	`tr -d -' as bad option argument.  Work around this by deleting
	an unrelated character.
	Report by Tim Rice <tim@multitalents.net>.

2006-05-22  Paul Eggert  <eggert@cs.ucla.edu>,
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>,
	    Stepan Kasal  <kasal@ucw.cz>

	* doc/autoconf.texi (Particular Programs): Do not promise that
	we always prefer the GNU version of the program, and that we
	search according to PATH; both rules can have exceptions.
	Update description of AC_PROG_GREP, AC_PROG_EGREP, AC_PROG_FGREP,
	AC_PROG_SED.  Move descriptions of limitations
	to the Limitations of Usual Tools section.
	(Limitations of Usual Tools) <sed>: Mention script length
	limitations with Solaris /usr/ucb/sed.
	<grep>: Fix wording for empty alternative.  Mention that -c and
	-l should not be combined, and that -E and -F should not be
	combined.

2006-05-21  Paul Eggert  <eggert@cs.ucla.edu>
	and Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/autoconf/programs.m4 (AC_PROG_SED): Catch script length
	limits in Solaris 8 /usr/ucb/sed by testing a long script.

2006-05-22  Stepan Kasal  <kasal@ucw.cz>

	* doc/autoconf.texi (Defining Symbols): Literal parameter of
	AC_DEFINE is now passed to m4_pattern_allow.
	* NEWS: Mention that; likewise for AC_SUBST.
	* lib/autoconf/general.m4 (AC_DEFINE_TRACE_LITERAL): Pass
	the parameter to m4_pattern_allow.
	* tests/tools.at: Add a check for that.
